Sat Jun 22 14:02:32 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * version-nr, debian/changelog: Start 1.11

Fri Jun 21 21:53:24 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * debian/dpkg.postinst: Merge patch from Josip Rodin to improve
    the move from /usr/info to /usr/share/info

Fri Jun 21 21:11:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * po/ca.po: Updated

Fri Jun 21 19:09:38 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * scripts/dpkg-genchanges.pl: Handle substvars in the Binary field

Thu Jun 20 00:54:54 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Fix broken merge from 1.9 branch.

Sat Jun  1 23:22:19 CDT 2002 Adam Heath <doogie@debian.org>

  * dpkg-deb/main.c, main/main.c, main/query.c, dselect/main.cc,
    split/main.c: Revert last modification.  It'll be fixed properly for
    dpkg 1.11.

Sat Jun  1 16:45:13 CDT 2002 Adam Heath <doogie@debian.org>

  * dpkg-deb/main.c, main/main.c, main/query.c, dselect/main.cc,
    split/main.c: Fixed printversion(), to allow translations to be done
    better.

Sat Jun  1 16:17:59 CDT 2002 Adam Heath <doogie@debian.org>

  * po/pt_BR.po: Updated.

Sat Jun  1 22:04:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * po/ru.po: Updated

Fri May 31 21:46:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * man/fr/dpkg-scanpackages.8, man/fr/dpkg-source.1, man/fr/dpkg.8,
    man/fr/start-stop-daemon.8, man/fr/deb-control.5: Updated

Mon May 27 21:13:00 CDT 2002 Adam Heath <doogie@debian.org>

  * po/de.po, po/fr.po, po/gl.po: Updated.

Sun May 26 18:50:10 CET 2002 Peter Karlsson <peterk@debian.org>

  * man/sv/dpkg.8, man/sv/start-stop-daemon.8, po/sv.po: Updated Swedish
    translation.

Sun May 26 01:35:34 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/tarfn.c: dpkg now reorders symlinks when extracting debs.  However,
    this is also still done when building debs.  After a stable release of