@@ -1,5 +1,7 @@
 dpkg (1.11) unstable; urgency=low
 
+  * Move dselect methods to dselect package
+
  -- Wichert Akkerman <wakkerma@debian.org>  Sat, 22 Jun 2002 14:02:59 +0200
 
 dpkg (1.10) unstable; urgency=low
