@@ -1,3 +1,7 @@
+Sat Jun 22 14:10:43 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/rules: Install dselect methods in dselect package
+
 Sat Jun 22 14:02:32 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * version-nr, debian/changelog: Start 1.11
